fix: shortcut input overflow on Windows

--- a/src-ui/settings/settings.less
+++ b/src-ui/settings/settings.less
@@ -36,6 +36,7 @@ input[type='checkbox'] {
 }
 
 input {
+  max-width: 100%;
   border-radius: 5px;
   border: 1px solid var(--card-border);
   padding: 0.25rem;
